--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="author" content="dqwyy">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
+	body {margin:25px}
+	h1 {text-align: center}
 </style>
 <title>dqwyy - About Me Page</title>
 </head>
@@ -13,6 +15,7 @@
 <body>
 
 <h1>dqwyy - About Me Page</h1>
+<p><img src="https://i.loli.net/2018/08/06/5b6841910cd67.png" alt="Avatar" style="display: block; margin-left: auto; margin-right: auto; width:55px"></p>
 <ul>
 	<li><b>Name:</b> dqwyy</li>
 	<li><b>Birth year:</b> 1997</li>
