--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 	<meta name="description" content="dqwyy - About Me Page">
 	<meta name="author" content="dqwyy">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-	body {margin:25px}
-	h1 {text-align: center}
+<style type="text/css">
+	body {margin:25px; background-color:rgb(242, 249, 255)}
+	h1 {text-align: center; background-color:DodgerBlue; color:white; padding:10px; font-family:Sans-Serif}
+	a:link {text-decoration: none; color:DodgerBlue}
+	a:visited {text-decoration: none; color:DodgerBlue}
+	a:hover {text-decoration: underline; color:DodgerBlue}
+	a:active {text-decoration: none; color:DodgerBlue}
 </style>
 <title>dqwyy - About Me Page</title>
 </head>
