--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="dqwyy">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style type="text/css">
-	body {margin:25px; background-color:rgb(242, 249, 255)}
+	body {margin:20px; background-color:rgb(242, 249, 255)}
 	h1 {text-align: center; background-color:DodgerBlue; color:white; padding:10px; font-family:Sans-Serif}
 	a:link {text-decoration: none; color:DodgerBlue}
 	a:visited {text-decoration: none; color:DodgerBlue}
@@ -26,12 +26,12 @@
 	<li><b>Location:</b> Guangdong, P.R.China</li>
 	<li><b>Education:</b> Major in chemistry at South China Normal University</li>
 	<li><b>Blog:</b> <a target="_blank" href="http://dqwyy.moe">http://dqwyy.moe</a>
-	<li><b>Language:</b> (Descripted by <a target="_blank" href="http://www.govtilr.org/skills/ILRscale2.htm">Interagency Language Roundtable scale</a>)
+	<li><b>Language:</b> (Descripted by <a target="_blank" href="http://www.govtilr.org/skills/ILRscale2.htm">Interagency Language Roundtable Scale</a>)
 	<ul>
-		<li><code>en</code> - 1+&emsp;English - Elementary Proficiency Plus</li>
+		<li><code>en</code> - 1<sup>+</sup>&emsp;English - Elementary Proficiency Plus</li>
 		<li><code>zh-CN</code> - N&emsp;Simplified Chinese (China) - Native</li>
 		<li><code>zh-TW</code> - 3&emsp;Traditional Chinese (Taiwan) - General Professional Proficiency</li>
-		<li><code>ja</code> - 0+&emsp;Japanese - Memorized Proficiency</li>
+		<li><code>ja</code> - 0<sup>+</sup>&emsp;Japanese - Memorized Proficiency</li>
 		<li><code>zh-czhu</code> - N&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Teochew_dialect">Teochew Dialect</a> - Native</li>
 		<li><code>zh-yue</code> - 2&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Cantonese">Cantonese</a> - Limited Working Proficiency</li>
 	</ul>
