--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h2>Social Links</h2>
 <ul>
-	<li>Email: <code>me<abbr title="replace # with @">#</abbr>dqwyy.moe</code></li>
+	<li>Email: <code><abbr title="replace # with @">me#dqwyy.moe</abbr></code></li>
 	<li><a target="_blank" href="https://twitter.com/dqwyy1997">Twitter</a></li>
 	<li>IRC Channel: <a href="irc://irc.freenode.net/dqwyy">#dqwyy@Freenode</a>&emsp;(My IRC nickname at Freenode and Rizon is <code>dqwyy</code>)</li>
 	<li><a target="_blank" href="https://github.com/dqwyy">GitHub</a></li>
@@ -50,8 +50,9 @@
 	<li><a target="_blank" href="https://nyaa.si/user/dqwyy">Nyaa</a>, <a target="_blank" href="https://anidex.info/user/12115">AniDex</a>, <a target="_blank" href="https://nyaa.pantsu.cat/user/2965/dqwyy">NyaaPantsu</a></li>
 	<li><a target="_blank" href="https://niu.moe/@dqwyy">Mastodon@niu.moe</a></li>
 	<li><a target="_blank" href="https://music.163.com/#/user/home?id=75045800">NetEase Cloud Music</a></li>
+	<li><a target="_blank" href="https://steamcommunity.com/id/dqwyy/">Steam</a></li>
 	<li><b>Not active:</b> , <a target="_blank" href="https://www.quora.com/profile/Wang-Yang-Ying">Quora</a>, <a target="_blank" href="https://stackexchange.com/users/10686492/dqwyy">Stack Exchange</a>, <a target="_blank" href="https://www.pixiv.net/member.php?id=17169968">Pixiv</a>, <a target="_blank" href="http://www.nicovideo.jp/user/54714870">Niconico</a>, <a target="_blank" href="https://www.v2ex.com/member/dqwyy">V2EX</a>, <a target="_blank" href="https://chaoli.club/index.php/member/3848">Chaoli Club</a></li>
-	<li><b>Won't be active anymore due to TOS:</b> <a target="_blank" href="https://www.zhihu.com/people/dqwyy/activities">Zhihu</a>, <s><a target="_blank" href="https://www.facebook.com/dqwyy">Facebook</a></s>, <a target="_blank" href="https://space.bilibili.com/21290278/#/">Bilibili</a></li>
+	<li><b>Won't be active anymore due to <abbr title="Terms of Service">ToS</abbr>:</b> <a target="_blank" href="https://www.zhihu.com/people/dqwyy/activities">Zhihu</a>, <s><a target="_blank" href="https://www.facebook.com/dqwyy">Facebook</a></s>, <a target="_blank" href="https://space.bilibili.com/21290278/#/">Bilibili</a></li>
 </body>
 
 </html>
