--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <h1>dqwyy - About Me Page</h1>
 <p><img src="https://i.loli.net/2018/08/06/5b6841910cd67.png" alt="Avatar" style="display: block; margin-left: auto; margin-right: auto; width:55px"></p>
 <ul>
-	<li><b>Name:</b> dqwyy</li>
+	<li><b>Name:</b> Yang-ying "dqwyy" WANG</li>
 	<li><b>Birth year:</b> 1997</li>
 	<li><b>Location:</b> Guangdong, P.R.China</li>
 	<li><b>Education:</b> Major in chemistry at South China Normal University</li>
