--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<li><b>Name:</b> dqwyy</li>
 	<li><b>Birth year:</b> 1997</li>
 	<li><b>Location:</b> Guangdong, P.R.China</li>
-	<li><b>Education:</b> Major in chemistry at South China Normal University</li>
+	<li><b>Education:</b> Major in chemistry at <a target="_blank" href="http://english.scnu.edu.cn">South China Normal University</a></li>
 	<li><b>Blog:</b> <a target="_blank" href="http://dqwyy.moe">http://dqwyy.moe</a>
 	<li><b>Language:</b> (Descripted by <a target="_blank" href="http://www.govtilr.org/skills/ILRscale2.htm">Interagency Language Roundtable Scale</a>)
 	<ul>
