--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <h2>Social Links</h2>
 <ul>
-	<li>Email: me(AT)dqwyy(DOT)moe</li>
+	<li>Email: <code>me(AT)dqwyy(DOT)moe</code></li>
 	<li><a target="_blank" href="https://twitter.com/dqwyy1997">Twitter</a></li>
 	<li>IRC Channel: <a href="irc://irc.freenode.net/dqwyy">#dqwyy@Freenode</a>&emsp;(My IRC nickname at Freenode and Rizon is <code>dqwyy</code>)</li>
 	<li><a target="_blank" href="https://github.com/dqwyy">GitHub</a></li>
