--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	a:visited {text-decoration: none; color:DodgerBlue}
 	a:hover {text-decoration: underline; color:DodgerBlue}
 	a:active {text-decoration: none; color:DodgerBlue}
-	code {font-size:x-large}
+	code {font-size:large}
 </style>
 <title>dqwyy - About Me Page</title>
 </head>
