--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 		<li><code>zh-yue</code> - 2&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Cantonese">Cantonese</a> - Limited Working Proficiency</li>
 	</ul>
 	<li><b>Hobby:</b> Anime, visual novel, computer, chemistry, languages</li>
+	<li><b>GPG Public Key:</b> <a href="dqwyypublickey.txt">ASCII</a>, <a href="dqwyypublickey.gpg">binary</a></li>
 </ul>
 
 <h2>Social Links</h2>
 <ul>
-	<li>Email: <code>me(AT)dqwyy(DOT)moe</code></li>
+	<li>Email: <abbr title="Please replace # with @"><code>me#dqwyy.moe</code></abbr></li>
 	<li><a target="_blank" href="https://twitter.com/dqwyy1997">Twitter</a></li>
 	<li>IRC Channel: <a href="irc://irc.freenode.net/dqwyy">#dqwyy@Freenode</a>&emsp;(My IRC nickname at Freenode and Rizon is <code>dqwyy</code>)</li>
 	<li><a target="_blank" href="https://github.com/dqwyy">GitHub</a></li>
