--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<li><code>zh-yue</code> - 2&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Cantonese">Cantonese</a> - Limited Working Proficiency</li>
 	</ul>
 	<li><b>Hobby:</b> Anime, visual novel, computer, chemistry, languages</li>
-	<li><b>GPG Public Key:</b> <a href="dqwyypublickey.gpg"><code>dqwyypublickey.gpg</code></a>, <a href="dqwyypublickey.txt" target"_blank">ASCII text format</a></li>
+	<li><b>GPG Public Key:</b> <a href="dqwyypublickey.gpg"><code>dqwyypublickey.gpg</code></a>, <a href="dqwyypublickey.txt" target="_blank">ASCII text format</a></li>
 </ul>
 
 <h2>Social Links</h2>
