--- a/index.html
+++ b/index.html
@@ -18,43 +18,8 @@
 </head>
 
 <body>
+	<p>Under construction, not available now.</p>
 
-<h1>dqwyy - About Me Page</h1>
-<p><img src="https://i.loli.net/2018/08/06/5b6841910cd67.png" alt="Avatar" style="display: block; margin-left: auto; margin-right: auto; width:55px"></p>
-<ul>
-	<li><b>Name:</b> dqwyy</li>
-	<li><b>Birth year:</b> 1997</li>
-	<li><b>Location:</b> Guangdong, P.R.China</li>
-	<li><b>Education:</b> Major in chemistry at <a target="_blank" href="http://english.scnu.edu.cn">South China Normal University</a></li>
-	<li><b>Blog:</b> <a target="_blank" href="http://dqwyy.moe">http://dqwyy.moe</a>
-	<li><b>Language:</b> (Descripted by <a target="_blank" href="http://www.govtilr.org/skills/ILRscale2.htm">Interagency Language Roundtable Scale</a>)
-	<ul>
-		<li><code>en</code> - 1<sup>+</sup>&emsp;English - Elementary Proficiency Plus</li>
-		<li><code>zh-CN</code> - N&emsp;Simplified Chinese (China) - Native</li>
-		<li><code>zh-TW</code> - 3&emsp;Traditional Chinese (Taiwan) - General Professional Proficiency</li>
-		<li><code>ja</code> - 0<sup>+</sup>&emsp;Japanese - Memorized Proficiency</li>
-		<li><code>zh-czhu</code> - N&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Teochew_dialect">Teochew Dialect</a> - Native</li>
-		<li><code>zh-yue</code> - 2&emsp;<a target="_blank" href="https://en.wikipedia.org/wiki/Cantonese">Cantonese</a> - Limited Working Proficiency</li>
-	</ul>
-	<li><b>Hobby:</b> Anime, visual novel, computer, chemistry, languages</li>
-	<li><b>GPG Public Key:</b> <a href="dqwyypublickey.gpg"><code>dqwyypublickey.gpg</code></a>, <a target="_blank" href="dqwyypublickey.txt">ASCII text format</a></li>
-</ul>
-
-<h2>Social Links</h2>
-<ul>
-	<li>Email: <abbr title="Please replace # with @"><code>me#dqwyy.moe</code></abbr></li>
-	<li><a target="_blank" href="https://twitter.com/dqwyy1997">Twitter</a></li>
-	<li>IRC Channel: <a href="irc://irc.freenode.net/dqwyy">#dqwyy@Freenode</a>&emsp;(My IRC nickname at Freenode and Rizon is <code>dqwyy</code>)</li>
-	<li><a target="_blank" href="https://github.com/dqwyy">GitHub</a></li>
-	<li><a target="_blank" href="https://myanimelist.net/animelist/dqwyy">My Anime List</a></li>
-	<li><a target="_blank" href="https://vndb.org/u137304/list">The Visual Novel Database</a></li>
-	<li><a target="_blank" href="https://zh.wikipedia.org/wiki/User:Dqwyy">Chinese Wikipedia</a></li>
-	<li><a target="_blank" href="https://nyaa.si/user/dqwyy">Nyaa</a>, <a target="_blank" href="https://anidex.info/user/12115">AniDex</a>, <a target="_blank" href="https://nyaa.pantsu.cat/user/2965/dqwyy">NyaaPantsu</a></li>
-	<li><a target="_blank" href="https://niu.moe/@dqwyy">Mastodon@niu.moe</a></li>
-	<li><a target="_blank" href="https://music.163.com/#/user/home?id=75045800">NetEase Cloud Music</a></li>
-	<li><a target="_blank" href="https://steamcommunity.com/id/dqwyy/">Steam</a></li>
-	<li><b>Not active:</b> , <a target="_blank" href="https://www.quora.com/profile/Wang-Yang-Ying">Quora</a>, <a target="_blank" href="https://stackexchange.com/users/10686492/dqwyy">Stack Exchange</a>, <a target="_blank" href="https://www.pixiv.net/member.php?id=17169968">Pixiv</a>, <a target="_blank" href="http://www.nicovideo.jp/user/54714870">Niconico</a>, <a target="_blank" href="https://www.v2ex.com/member/dqwyy">V2EX</a>, <a target="_blank" href="https://chaoli.club/index.php/member/3848">Chaoli Club</a></li>
-	<li><b>Won't be active anymore due to <abbr title="Terms of Service">ToS</abbr>:</b> <a target="_blank" href="https://www.zhihu.com/people/dqwyy/activities">Zhihu</a>, <s><a target="_blank" href="https://www.facebook.com/dqwyy">Facebook</a></s>, <a target="_blank" href="https://space.bilibili.com/21290278/#/">Bilibili</a></li>
 </body>
 
 </html>
